src/styles/global.css
@import "tailwindcss";
@plugin "@tailwindcss/typography";

@theme {
  --font-sans: "Inter", ui-sans-serif, system-ui;
  --font-mono: "JetBrains Mono", ui-monospace, SFMono-Regular;
  --color-brand-dark: #0a0a0a;
  --color-brand-border: #242424;
}

@layer base {  
  ::-webkit-scrollbar {
    width: 12px;
    height: 12px;
  }
  
  ::-webkit-scrollbar-track {
    background: #111111;
    border-radius: 0 0 8px 8px;
  }
  
  ::-webkit-scrollbar-thumb {
    background: var(--color-brand-border);
    border-radius: 10px;
    border: 2px solid #111111;
  }
  
  ::-webkit-scrollbar-thumb:hover {
    background: #404040;
  }
  
  html {
    font-size: 14px;
    font-family: var(--font-sans);
    -webkit-antialiased: antialiased;
    -moz-osx-font-smoothing: grayscale;
    overflow-x: hidden;
  }

  .lock-screen {
    overflow: hidden !important;
    height: 100% !important;
    position: fixed !important; /* The 'nuclear option' for iOS */
    width: 100% !important;
  }
}

@layer components {  
  .embed-standard {
    @apply w-full h-150 overflow-auto;
  }

  .embed-video {
    @apply w-full h-[50vw] max-h-100;
  }
  
  .prose :where(code):not(:where(pre *, [class~="not-prose"] *)) {
    @apply text-[13px] bg-neutral-900 px-1.5 py-0.5 mx-1 rounded 
           border border-brand-border text-neutral-200;
  }
  
  .prose :where(code):not(:where([class~="not-prose"] *))::before,
  .prose :where(code):not(:where([class~="not-prose"] *))::after {
    content: "" !important;
  }
}

